--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,7 +4,7 @@ stack: node 10  # окружение
 
 branches:
   only:
-    - master  # ветка git
+    - mian  # ветка git
 
 cache: node_modules  # кеширование
 
